// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders an Error component without crashing 1`] = `
<span
  className="errorContainer"
  id={null}
>
  <strong
    className="errorInfo"
  >
    Error
  </strong>
  
</span>
`;

exports[`Renders an Error with a subInfo Text component without crashing 1`] = `
<span
  className="errorContainer"
  id={null}
>
  <strong
    className="errorInfo"
  >
    Error
  </strong>
  Helpful hint
</span>
`;

exports[`it can have an optional ID attribute 1`] = `
<span
  className="errorContainer"
  id="error-message"
>
  <strong
    className="errorInfo"
  >
    Error
  </strong>
  Helpful hint
</span>
`;
